updates to spacing issues and ie

--- a/wp-content/themes/smashburger/css/main.css
+++ b/wp-content/themes/smashburger/css/main.css
@@ -657,8 +657,6 @@ div[data-type="sprite"] {
 	font-weight: 900;
 	text-shadow: 1px 0px 1px rgba(23,21,22,.67);
 	left: 15.5%;
-	z-index: 1;
-
 }
 .rotation {
 	display: none;
@@ -4807,7 +4805,7 @@ footer nav#site-navigation {
   	height: 100%;
   }
   .menu-locate, .local-burger, .salads, .kids, .puzzle, .create, #panel3 .row1 .small-12 img, #panel3 #row2 div, #panel6 .row1 .menu img  {
-  	height: 301px;
+  	/*height: 301px;*/
   }
   .menu.slider .slide img {
   	width: 100%;
@@ -4826,7 +4824,7 @@ footer nav#site-navigation {
   	opacity: 0;
 
   }
-  .flip-container:hover .back {
+  .flip-container:hover .back p, .flip-container:hover .back h4 {
   	opacity: 1;
   	trasform: rotateY(0deg);
   	-ms-trasform: rotateY(0deg);
